// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorBoundary /> renders err message when there is error 1`] = `
<div>
  <p>
    Sorry — something has gone wrong.
  </p>
</div>
`;

exports[`<ErrorBoundary /> renders the app without error 1`] = `
<div>
  App
</div>
`;
